# klods-syn

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.llm-context/rules/: flt-assets.md  flt-catalog.md  flt-rendering.md  flt-repo.md  flt-training.md  ins-ml.md  prm-assets.md  prm-augmentation.md  prm-catalog.md  prm-data.md  prm-notebook.md  prm-rendering.md  prm-training.md
docs/: architecture.md  data-augmentation.md  datasets.md  training-strategy.md
klods_syn/: _modidx.py  data.py  eval.py  fusion.py  metric.py  retrieval.py
klods_syn/assets/: hdris.py
klods_syn/rendering/: dataset.py  domain_randomization.py  viewpoints.py
nbs/: 000_parts_catalog.md  001_hdris.md  00_data.md  01_baseline.md  01_gdansk.md  02_brickognize.md  04_baseline_eval.md  100_data.md  100_parts_catalog.md  100_rendering.md  100_viewpoints.md  101_gdansk.md  101_rendering.md  102_domain_randomization.md  103_paco_garcia.md  200_viewpoints.md  201_rendering.md  202_domain_randomization.md  203_render_dataset.md  204_synthetic_embeddings.md  301_metric_learning.md  302_inference.md  303_domain_gap_analysis.md  304_multiview_fusion.md  305_retrieval_eval.md  _quarto.yml  index.md  nbdev.yml
